# ClaraAuth

./: .gitignore  ClaraAuth.sln
AuthClient/: AuthClient.cpp  AuthClient.vcxproj  AuthClient.vcxproj.filters  AuthLib.h  antidebug.h  auth.h  features.h  response.h  responses.h  tenet_process.txt
AuthLib/: AuthLib.cpp  AuthLib.h  AuthLib.vcxproj  AuthLib.vcxproj.filters  CMakeLists.txt  Conanfile.py  bytes.h  client.cpp  client.h  encryption.cpp  encryption.h  hotp.h  md5.cpp  md5.h  resource.h  response.cpp  response.h  sha1.h  wrapper.cpp  wrapper.h  xor.h
AuthLib/source/helpers/: hotp.h  sha1.h  xor.h
AuthLib/source/mappers/: jsonMapper.cpp
AuthLib/source/models/: requests.cpp  responses.cpp  responses.h
AuthLib/source/utils/: encryption.cpp  hardware.cpp  hardware.h  token.cpp
AuthLib/src/exceptions/: EmptyKeyException.h  GenericException.h  all_exceptions.h
AuthLib/src/helpers/: bytes.h  hotp.h  sha1.h  xor.h
AuthLib/src/mappers/: jsonMapper.cpp  jsonMapper.h  mapper.cpp  mapper.h
AuthLib/src/models/: requests.h  responses.cpp  responses.h
AuthLib/src/modules/: api.cpp  api.h  features.cpp  features.h
AuthLib/src/utils/: encryption.cpp  encryption.h  hardware.cpp  hardware.h  logging.cpp  logging.h  token.cpp  token.h
